# polkadot-hackathon-2024

./: .gitignore  .gitmodules  README.md  package.json  quasar.config.ts
bangkok/03-zkLogin/src/zkLogin(substrate)/: .gitignore  Cargo.toml  rust-toolchain.toml  rustfmt.toml
bangkok/03-zkLogin/src/zkLogin(substrate)/node/src/: benchmarking.rs  command.rs  main.rs  rpc.rs  service.rs
bangkok/03-zkLogin/src/zkLogin(substrate)/runtime/src/: lib.rs
bangkok/03-zkLogin/src/zkLogin(substrate)/tests/tool/: Cargo.toml
bangkok/03-zkLogin/src/zkLogin/node/: Cargo.toml
bangkok/03-zkLogin/src/zkLogin/node/src/: chain_spec.rs  cli.rs  lib.rs  zklogin_benchmarking.rs
bangkok/03-zkLogin/src/zkLogin/runtime/: Cargo.toml
bangkok/05-Art3misOracle/src/contract/: .gitignore  Cargo.toml
bangkok/05-Art3misOracle/src/contract/app/: Cargo.toml
bangkok/05-Art3misOracle/src/contract/app/src/: lib.rs
bangkok/05-Art3misOracle/src/contract/app/tests/: node_test.rs  test.rs
bangkok/05-Art3misOracle/src/contract/wasm/: .binpath  Cargo.toml  build.rs  extended_vnft.idl
bangkok/05-Art3misOracle/src/contract/wasm/src/: lib.rs
bangkok/10-zk-omni/src/zk-6358-state-prover/: .gitignore  Cargo.toml  README.md  update.sh
bangkok/10-zk-omni/src/zk-6358-state-prover/src/: lib.rs  main.rs
bangkok/10-zk-omni/src/zk-6358-state-prover/src/exec_runner/: db_executor.rs  object_store_executor.rs  sc_local_verifier.rs
bangkok/11-Karting-heros/src/smartContract/: .gitignore  Cargo.toml  lib.rs
bangkok/16-Veles/src/substrate/common/: Cargo.toml
bangkok/16-Veles/src/substrate/common/src/: lib.rs  primitives.rs
bangkok/21-Sandglass/src/sandglass-node/: Cargo.toml  LICENSE  readme.md
bangkok/21-Sandglass/src/sandglass-node/circom/circomlib/: README.md  get_merkle_root.circom  input.json
bangkok/21-Sandglass/src/sandglass-node/circom/mixer-psd/: README.md  get_merkle_root.circom  input.json  mixer.circom  (+4 more)
bangkok/21-Sandglass/src/sandglass-node/node/: Cargo.toml
bangkok/21-Sandglass/src/sandglass-node/primitives/: Cargo.toml
bangkok/21-Sandglass/src/sandglass-node/runtime/: Cargo.toml
bangkok/22-Super_Fair_Governance/src/pallets/cdao_membership/: Cargo.toml
bangkok/22-Super_Fair_Governance/src/runtime/: Cargo.toml  build.rs
bangkok/22-Super_Fair_Governance/src/runtime/src/: lib.rs
bangkok/23-Dazhbog/src/substrate/: Cargo.toml  lib.rs
bangkok/23-Dazhbog/src/substrate/amm/: Cargo.toml  lib.rs
bangkok/23-Dazhbog/src/substrate/distributor/: Cargo.toml  lib.rs
bangkok/23-Dazhbog/src/substrate/erc20/: Cargo.toml  lib.rs
bangkok/23-Dazhbog/src/substrate/manager/: Cargo.toml  lib.rs
bangkok/23-Dazhbog/src/substrate/oracle/: Cargo.toml  lib.rs
bangkok/23-Dazhbog/src/substrate/paymentManager/: Cargo.toml  lib.rs
bangkok/23-Dazhbog/src/substrate/vault/: Cargo.toml  lib.rs
bangkok/25-PolkAttest/polkAttest-substrate-node/node/: Cargo.toml
bangkok/25-PolkAttest/polkAttest-substrate-node/node/src/: command.rs
bangkok/25-PolkAttest/polkAttest-substrate-node/runtime/: Cargo.toml
bangkok/25-PolkAttest/polkAttest-substrate-node/runtime/src/: contracts_config.rs  lib.rs
bangkok/25-PolkAttest/smartcontract/attestation/: Cargo.toml  lib.rs  package-lock.json  package.json
bangkok/25-PolkAttest/src/polkattest-node/: Cargo.toml  README.md  network.toml  rust-toolchain.toml
bangkok/25-PolkAttest/src/polkattest-node/node/: Cargo.toml  README.md
bangkok/25-PolkAttest/src/polkattest-node/runtime/: Cargo.toml  README.md  build.rs
bangkok/32-NFTSwap/src/nft_swap_substrate/: Cargo.toml  rust-toolchain.toml
bangkok/32-NFTSwap/src/nft_swap_substrate/node/: Cargo.toml
bangkok/32-NFTSwap/src/nft_swap_substrate/runtime/: Cargo.toml
bangkok/36-SoftLaw/src/IP_pallet/: .gitignore  Cargo.toml  README.md
bangkok/36-SoftLaw/src/IP_pallet/src/: lib.rs  mock.rs  tests.rs  types.rs
bangkok/44-Cyferio/src/tmc/: .gitignore  Cargo.toml  Makefile  README.md  UPGRADE.md  constants.toml  cyferio_rollup_config.toml  log  main.rs  rollup_config.toml  sov-rollup-starter.sh
bangkok/44-Cyferio/src/tmc/.cargo/: config.toml
bangkok/44-Cyferio/src/tmc/automation/: KEYGEN.md  README.md  preconditions.yaml  setup.yaml
bangkok/44-Cyferio/src/tmc/docker/: Dockerfile.bridge  Dockerfile.validator  README.md  bridge-healthcheck.sh  docker-compose.yml  run-bridge.sh  run-validator.sh
bangkok/44-Cyferio/src/tmc/scripts/: update_rev.sh
bangkok/51-substk/src/substk/: Cargo.toml  justfile  rustfmt.toml  taplo.toml
bangkok/Roar Network/src/runtime/: Cargo.toml
singapore/06-Conduits/src/tunnel/: .pre-commit-config.yaml  Cargo.toml  README.md  buf.yaml  build.rs  cliff.toml  deny.toml
singapore/06-Conduits/src/tunnel/proto/: command_v1.proto  tunnel_v1.proto
singapore/06-Conduits/src/tunnel/src/: access.rs  command.rs  error.rs  lib.rs  main.rs  tunnel.rs  types.rs
singapore/08-Bolarity/src/: .gitignore  Cargo.toml  package.json  rust-toolchain.toml  rustfmt.toml
singapore/08-Bolarity/src/.github/workflows/: rust.yml
singapore/08-Bolarity/src/node/: Cargo.toml  build.rs
singapore/08-Bolarity/src/node/src/: benchmarking.rs  chain_spec.rs  client.rs  command.rs  eth.rs  main.rs  service.rs
singapore/08-Bolarity/src/pallets/hybrid-vm/: Cargo.toml
singapore/08-Bolarity/src/pallets/hybrid-vm-port/: Cargo.toml  README.md
singapore/08-Bolarity/src/pallets/template/: Cargo.toml
singapore/08-Bolarity/src/runtime/: Cargo.toml  build.rs
singapore/08-Bolarity/src/runtime/src/: constants.rs  lib.rs  precompiles.rs  voter_bags.rs
singapore/08-Bolarity/src/test/: deploy_evm_contract.js  deploy_wasm_contract.js  evm_call_wasm.js  evm_call_wasm_echo.js  wasm_call_evm.js  wasm_call_evm_echo.js
singapore/23-Cloak/src/fhe-no-std/: Cargo.toml
singapore/40-PixelChain/node/: Cargo.toml
singapore/40-PixelChain/node/src/: main.rs  rpc.rs  service.rs
singapore/40-PixelChain/pallets/dapps-staking/: Cargo.toml
singapore/40-PixelChain/pallets/dapps-staking/src/: tests.rs
singapore/40-PixelChain/primitives/core/: Cargo.toml
singapore/40-PixelChain/primitives/core/src/: lib.rs  types.rs
(+6656 files in other folders)
